--- a/TimeNowWorld.Core/TimeNowWorld.Core.csproj
+++ b/TimeNowWorld.Core/TimeNowWorld.Core.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="DTOs\" />
+    <ProjectReference Include="..\TimeNowWorld.Data\TimeNowWorld.Data.csproj" />
   </ItemGroup>
 
 </Project>
